--- a/Itax_calculation_master/views/view_res_language.xml
+++ b/Itax_calculation_master/views/view_res_language.xml
@@ -5,7 +5,7 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//form/sheet/notebook/page[@name='personal_information']/group/group/group/field[@name='lang']"
+            <xpath expr="//form/sheet/notebook/page[@name='personal_information']/group/group/field[@name='lang']"
                    position="after">
                 <span class="o_form_label o_td_label" name="language_name">
                     <b>Languages</b>
