--- a/Itax_calculation_master/views/hr_employee_views.xml
+++ b/Itax_calculation_master/views/hr_employee_views.xml
@@ -32,42 +32,39 @@
                             <field name="city_type_conf" options="{'no_create': True, 'no_open': True}"/>
                             <field name="rent_paid"/>
                             <field name="rental_line_counts" invisible="1"/>
-                            <button string="Create lines" class="oe_highlight"
-                                    type="object" name="create_lines"
-                                    attrs="{'invisible':[('rental_line_counts', '!=', 0)]}"/>
-                            <button string="Update lines" class="oe_highlight"
-                                    type="object" name="update_lines"
-                                    attrs="{'invisible':[('rental_line_counts', '=', 0)]}"/>
                         </group>
                         <group colspan="2">
-                            <field name="rental_line_ids" widget="one2many" nolabel="1">
-                                <tree create="0">
-                                    <field name="date_from"/>
-                                    <field name="date_to"/>
-                                    <field name="rent_paid"/>
-                                    <field name="city_type_conf"/>
-                                    <field name="employee_id" invisible="1"/>
-                                </tree>
-                                <form>
-                                    <group>
-                                        <group>
-                                            <field name="date_from" readonly="1"/>
-                                            <field name="date_to" readonly="1"/>
-                                            <field name="employee_id" readonly="1"/>
-                                        </group>
-                                        <group>
-                                            <field name="rent_paid"/>
-                                            <field name="city_type_conf"/>
-                                        </group>
-                                    </group>
-                                </form>
-                            </field>
                         </group>
                     </group>
+                    <button string="Create lines" class="oe_highlight"
+                            type="object" name="create_lines"
+                            attrs="{'invisible':[('rental_line_counts', '!=', 0)]}"/>
+                    <button string="Update lines" class="oe_highlight"
+                            type="object" name="update_lines"
+                            attrs="{'invisible':[('rental_line_counts', '=', 0)]}"/>
+                    <field name="rental_line_ids" widget="one2many" nolabel="1">
+                        <tree create="0">
+                            <field name="date_from"/>
+                            <field name="date_to"/>
+                            <field name="rent_paid"/>
+                            <field name="city_type_conf"/>
+                            <field name="employee_id" invisible="1"/>
+                        </tree>
+                        <form>
+                            <group>
+                                <field name="date_from" readonly="1"/>
+                                <field name="date_to" readonly="1"/>
+                                <field name="employee_id" readonly="1"/>
+                                <field name="rent_paid"/>
+                                <field name="city_type_conf"/>
+                            </group>
+                        </form>
+                    </field>
+
                 </page>
             </xpath>
 
-            <xpath expr="//form/sheet/notebook/page[@name='personal_information']/group/group/field[@name='address_home_id']" position="after">
+            <xpath expr="//form/sheet/notebook/page[@name='personal_information']/group/group/group/field[@name='address_home_id']" position="after">
                 <field name="self_record" invisible="1"/>
                 <span class="o_form_label o_td_label" name="address_name">
                     <b>Present Address</b>
@@ -118,9 +115,11 @@
                     <field name="spouse_name_emp" placeholder="Name" />
                     <field name="spouse_dob" placeholder="DOB" />
                 </div>
-                <field name="bank_account_id"/>
-                <field name="uan_number"/>
+                <div>
+                    <field name="bank_account_id" string="Bank Account Number"/>
+                </div>
                 <field name="aadhar_number"/>
+                <field name="uan_number"/>
             </xpath>
             <xpath expr="//field[@name='spouse_complete_name']" position="attributes">
                 <attribute name="invisible">1</attribute>
